data/derived/comb/progs/unify/prog0354.ml.out
Characters 64-68:
  | Sine e'		-> sin(pi *. eval(e'))
                              ^^^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'b
